fixed issue w/ too large boxes

--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,10 @@ form button[type="submit"] {
     font-size: xx-large;
     min-height: auto;
     overflow: hidden;
-    width: max-content;
+    max-width: 80%;
     text-align: center;
+    overflow: auto;
+    word-wrap: break-word;
 }
 
 .radioLabel {
